[package]
name = "dipa"
version = "0.1.0"
description = "dipa makes it easy to efficiently delta encode Rust data structures."
authors = ["Chinedu Francis Nwafili <frankie.nwafili@gmail.com>"]
edition = "2018"
keywords = ["delta", "encode", "compress", "network", "state", "client", "server"]

build = "build.rs"

[features]
impl-tester = ["bincode"]

[dependencies]
bincode = {optional = true, version = "1.3"}
serde = {version = "1", features = ["derive"]}

[dev-dependencies]
bincode = "1.3"

[workspace]
members = [
    "crates/dipa-derive",
    "crates/dipa-derive-test",
]
