[package]
name = "dipa"
version = "0.1.0"
description = "dipa makes it easy to efficiently delta encode large Rust data structures."
authors = ["Chinedu Francis Nwafili <frankie.nwafili@gmail.com>"]
edition = "2018"
keywords = ["delta", "encode", "compress", "client", "server"]
license = "MIT/Apache-2.0"
repository = "https://github.com/chinedufn/dipa"

build = "build.rs"

[features]
derive = ["dipa-derive"]
impl-tester = ["bincode"]

[dependencies]
bincode = {optional = true, version = "1.3"}
serde = {version = "1", features = ["derive"]}

# Optional Dependencies
dipa-derive = {optional = true, version = "0.1", path = "./crates/dipa-derive"}

[dev-dependencies]
bincode = "1.3"

[workspace]
members = [
    "crates/dipa-derive",
    "crates/dipa-derive-test",
]
