[package]
name = "dipa-derive-test"
version = "0.1.0"
authors = ["Chinedu Francis Nwafili <frankie.nwafili@gmail.com>"]
edition = "2018"
publish = []

[dependencies]
dipa = {path = "../../", features = ["dipa-impl-tester"]}
dipa-derive = {path = "../dipa-derive"}
trybuild = "1.0.41"
serde = {version = "1", features = ["derive"]}