[package]
name = "dipa-derive"
version = "0.1.0"
description = "The derive macro for the dipa crate"
authors = ["Chinedu Francis Nwafili <frankie.nwafili@gmail.com>"]
edition = "2018"
keywords = ["delta", "encode", "compress", "client", "server"]
license = "MIT/Apache-2.0"
repository = "https://github.com/chinedufn/dipa"

[lib]
proc-macro = true

[dependencies]
# extra-traits used to #[derive(Debug)] on syn::Lit. Can be removed after we're doing iterating on
# getting things working.
syn = {version = "1.0", features = ["extra-traits"] }
quote = "1.0"

